@@ -2045,11 +2045,6 @@ condition|(
 name|hasPayloads
 condition|)
 block|{
-name|ros
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
 name|payloads
 operator|=
 operator|new
