@@ -386,10 +386,9 @@ block|}
 block|}
 block|}
 block|}
-annotation|@
-name|Override
+comment|/** Forces any buffered output to be written. */
 DECL|method|flush
-specifier|public
+specifier|protected
 name|void
 name|flush
 parameter_list|()
