@@ -812,22 +812,6 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
-DECL|method|flush
-annotation|@
-name|Override
-specifier|public
-name|void
-name|flush
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-name|io
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-block|}
 DECL|method|getFilePointer
 annotation|@
 name|Override
