@@ -4879,33 +4879,6 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|flush
-specifier|public
-name|void
-name|flush
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-try|try
-block|{
-name|super
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|io
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-annotation|@
-name|Override
 DECL|method|close
 specifier|public
 name|void
