@@ -462,27 +462,6 @@ block|}
 block|}
 annotation|@
 name|Override
-DECL|method|flush
-specifier|public
-name|void
-name|flush
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-name|dir
-operator|.
-name|maybeThrowDeterministicException
-argument_list|()
-expr_stmt|;
-name|delegate
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-block|}
-annotation|@
-name|Override
 DECL|method|writeByte
 specifier|public
 name|void
