@@ -303,27 +303,6 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|flush
-specifier|public
-name|void
-name|flush
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-name|sleep
-argument_list|(
-name|flushDelayMillis
-argument_list|)
-expr_stmt|;
-name|delegate
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-block|}
-annotation|@
-name|Override
 DECL|method|close
 specifier|public
 name|void
