@@ -162,22 +162,6 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|flushInternal
-specifier|public
-name|void
-name|flushInternal
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-name|dest
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-block|}
-annotation|@
-name|Override
 DECL|method|closeInternal
 specifier|public
 name|void
@@ -390,7 +374,7 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|flush
+name|flushBufferToCache
 argument_list|()
 expr_stmt|;
 return|return
