@@ -205,7 +205,7 @@ throw|;
 block|}
 comment|/** Write the buffered bytes to cache */
 DECL|method|flushBufferToCache
-specifier|private
+specifier|protected
 name|void
 name|flushBufferToCache
 parameter_list|()
@@ -232,32 +232,6 @@ expr_stmt|;
 name|bufferPosition
 operator|=
 literal|0
-expr_stmt|;
-block|}
-DECL|method|flushInternal
-specifier|protected
-specifier|abstract
-name|void
-name|flushInternal
-parameter_list|()
-throws|throws
-name|IOException
-function_decl|;
-annotation|@
-name|Override
-DECL|method|flush
-specifier|public
-name|void
-name|flush
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-name|flushBufferToCache
-argument_list|()
-expr_stmt|;
-name|flushInternal
-argument_list|()
 expr_stmt|;
 block|}
 DECL|method|closeInternal
