@@ -552,11 +552,6 @@ argument_list|)
 expr_stmt|;
 name|output
 operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-name|output
-operator|.
 name|close
 argument_list|()
 expr_stmt|;
